add_subdirectory(base)
add_subdirectory(chrome)
add_subdirectory(components)
add_subdirectory(ipc)
add_subdirectory(media)
add_subdirectory(ppapi/native_client)
add_subdirectory(ppapi/native_client/src/trusted/plugin)
add_subdirectory(third_party/libevent)
add_subdirectory(third_party/jsoncpp/source)
add_subdirectory(${NATIVE_CLIENT_DIR})
