set(BASE_STATIC_LIBRARY_NAME chrome_base_static)
set(ALLOCATOR_LIBRARY_NAME allocator)
set(XDG_MIME_LIBRARY_NAME xdg_mime)
set(MODP_B64_LIBRARY_NAME modp_b64)
set(DYNAMIC_ANNOTATIONS_LIBRARY_NAME dynamic_annotations)

set(CHROME_BASE_LIBRARY_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/xdg_user_dirs/xdg_user_dir_lookup.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/event_recorder_stubs.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/linux_util.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/md5.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/message_pump_glib.cc
    #${CMAKE_CURRENT_SOURCE_DIR}/message_pump_gtk.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/message_pump_webkit.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/message_pump_libevent.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/metrics/field_trial.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/posix/file_descriptor_shuffle.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/sync_socket_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/dmg_fp/g_fmt.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/dmg_fp/dtoa_wrapper.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/icu/icu_utf.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/nspr/prtime.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/allocator/allocator_extension.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/allocator/type_profiler_control.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/at_exit.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/atomicops_internals_x86_gcc.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/base_paths.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/base_paths_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/base64.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/bind_helpers.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/build_time.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/callback_internal.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/command_line.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/cpu.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/debug/alias.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/debug/crash_logging.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/debug/debugger.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/debug/debugger_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/debug/profiler.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/debug/stack_trace.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/debug/stack_trace_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/debug/trace_event_impl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/environment.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/file_path.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/file_util.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/file_util_linux.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/file_util_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/files/file_path_watcher.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/files/file_path_watcher_linux.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/files/file_util_proxy.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/files/important_file_writer.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/files/scoped_temp_dir.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/guid.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/guid_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/hash.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/hi_res_timer_manager_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/json/json_file_value_serializer.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/json/json_parser.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/json/json_reader.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/json/json_string_value_serializer.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/json/json_writer.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/json/string_escape.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/lazy_instance.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/location.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/logging.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/memory/aligned_memory.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/memory/discardable_memory.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/memory/ref_counted.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/memory/ref_counted_memory.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/memory/singleton.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/memory/weak_ptr.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/message_loop.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/message_loop_proxy.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/message_loop_proxy_impl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/message_pump.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/message_pump_default.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/metrics/sample_map.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/metrics/sample_vector.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/metrics/bucket_ranges.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/metrics/histogram.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/metrics/histogram_base.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/metrics/histogram_samples.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/metrics/histogram_snapshot_manager.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/metrics/sparse_histogram.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/metrics/statistics_recorder.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/metrics/stats_counters.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/metrics/stats_table.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/native_library_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/path_service.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/pending_task.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/pickle.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/platform_file.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/platform_file_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/posix/global_descriptors.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/posix/unix_domain_socket_linux.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/process_linux.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/process_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/process_util.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/process_util_linux.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/process_util_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/profiler/scoped_profile.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/profiler/alternate_timer.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/profiler/tracked_time.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/rand_util.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/rand_util_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/run_loop.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/safe_strerror_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/scoped_native_library.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/sequence_checker_impl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/sequenced_task_runner.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/sha1_portable.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/shared_memory_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/string_number_conversions.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/string_piece.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/string_split.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/string_util.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/string16.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/stringprintf.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/supports_user_data.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/synchronization/cancellation_flag.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/synchronization/condition_variable_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/synchronization/lock.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/synchronization/lock_impl_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/synchronization/waitable_event_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/synchronization/waitable_event_watcher_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/system_monitor/system_monitor.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/system_monitor/system_monitor_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/sys_info.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/sys_info_linux.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/sys_info_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/sys_string_conversions_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/task_runner.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/thread_task_runner_handle.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/non_thread_safe_impl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/platform_thread_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/post_task_and_reply_impl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/sequenced_worker_pool.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/simple_thread.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/thread.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/thread_checker_impl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/thread_collision_warner.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/thread_id_name_manager.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/thread_local_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/thread_local_storage_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/thread_restrictions.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/watchdog.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/worker_pool.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/worker_pool_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/time.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/time_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/timer.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/tracked_objects.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/tracking_info.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/utf_offset_string_conversions.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/utf_string_conversion_utils.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/utf_string_conversions.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/values.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/value_conversions.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/version.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/vlog.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/nix/mime_util_xdg.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/nix/xdg_util.cc
)

set(CHROME_BASE_LIBRARY_INCLUDE_DIRECTORIES
    ${CHROME_DEPS_DIR}
    ${CHROME_DEPS_DIR}/..
    ${GLIB_INCLUDE_DIRS}
)

set(CHROME_BASE_LIBRARY_LIBRARIES
    ${BASE_STATIC_LIBRARY_NAME}
    ${ALLOCATOR_LIBRARY_NAME}
    ${XDG_MIME_LIBRARY_NAME}
    ${MODP_B64_LIBRARY_NAME}
    ${DYNAMIC_ANNOTATIONS_LIBRARY_NAME}
    ${LIBEVENT_LIBRARY_NAME}
    ${GLIB_LIBRARIES}
    -lrt
    -ldl
    -lpthread
)

set(XDG_MIME_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/xdg_mime/xdgmime.c
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/xdg_mime/xdgmimealias.c
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/xdg_mime/xdgmimecache.c
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/xdg_mime/xdgmimeglob.c
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/xdg_mime/xdgmimeicon.c
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/xdg_mime/xdgmimeint.c
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/xdg_mime/xdgmimemagic.c
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/xdg_mime/xdgmimeparent.c
)

include_directories(${CHROME_BASE_LIBRARY_INCLUDE_DIRECTORIES})
remove_definitions(-DHAVE_CONFIG_H=1)
add_library(${BASE_STATIC_LIBRARY_NAME} STATIC ${CMAKE_CURRENT_SOURCE_DIR}/base_switches.cc)
add_library(${ALLOCATOR_LIBRARY_NAME} STATIC ${CMAKE_CURRENT_SOURCE_DIR}/allocator/allocator_extension_thunks.cc)
add_library(${MODP_B64_LIBRARY_NAME} STATIC ${CHROME_DEPS_DIR}/third_party/modp_b64/modp_b64.cc)
add_library(${XDG_MIME_LIBRARY_NAME} STATIC ${XDG_MIME_SOURCES})
add_library(${DYNAMIC_ANNOTATIONS_LIBRARY_NAME} STATIC ${CMAKE_CURRENT_SOURCE_DIR}/third_party/dynamic_annotations/dynamic_annotations.c)
set_target_properties(${BASE_STATIC_LIBRARY_NAME} PROPERTIES COMPILE_FLAGS -fPIC)
set_target_properties(${ALLOCATOR_LIBRARY_NAME} PROPERTIES COMPILE_FLAGS -fPIC)
set_target_properties(${MODP_B64_LIBRARY_NAME} PROPERTIES COMPILE_FLAGS -fPIC)
set_target_properties(${DYNAMIC_ANNOTATIONS_LIBRARY_NAME} PROPERTIES COMPILE_FLAGS -fPIC)
set_target_properties(${XDG_MIME_LIBRARY_NAME} PROPERTIES COMPILE_FLAGS -fPIC)

add_library(${CHROME_BASE_LIBRARY_NAME} SHARED ${CHROME_BASE_LIBRARY_SOURCES})
target_link_libraries(${CHROME_BASE_LIBRARY_NAME} ${CHROME_BASE_LIBRARY_LIBRARIES})

# untrusted part
include(NaclBuildNexe)

set(libbase_untrusted_sources
    ${CMAKE_CURRENT_SOURCE_DIR}/../build/build_config.h
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/dmg_fp/dmg_fp.h
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/dmg_fp/g_fmt.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/dmg_fp/dtoa_wrapper.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/icu/icu_utf.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/icu/icu_utf.h
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/nspr/prcpucfg.h
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/nspr/prcpucfg_freebsd.h
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/nspr/prcpucfg_nacl.h
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/nspr/prcpucfg_openbsd.h
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/nspr/prcpucfg_solaris.h
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/nspr/prtime.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/nspr/prtime.h
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/nspr/prtypes.h
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/xdg_mime/xdgmime.h
    ${CMAKE_CURRENT_SOURCE_DIR}/allocator/allocator_extension.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/allocator/allocator_extension.h
    ${CMAKE_CURRENT_SOURCE_DIR}/at_exit.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/at_exit.h
    ${CMAKE_CURRENT_SOURCE_DIR}/atomic_ref_count.h
    ${CMAKE_CURRENT_SOURCE_DIR}/atomic_sequence_num.h
    ${CMAKE_CURRENT_SOURCE_DIR}/atomicops.h
    ${CMAKE_CURRENT_SOURCE_DIR}/atomicops_internals_gcc.h
    ${CMAKE_CURRENT_SOURCE_DIR}/atomicops_internals_tsan.h
    ${CMAKE_CURRENT_SOURCE_DIR}/atomicops_internals_x86_gcc.h
    ${CMAKE_CURRENT_SOURCE_DIR}/atomicops_internals_x86_msvc.h
    ${CMAKE_CURRENT_SOURCE_DIR}/base_export.h
    ${CMAKE_CURRENT_SOURCE_DIR}/base_paths.h
    ${CMAKE_CURRENT_SOURCE_DIR}/base_paths_android.h
    ${CMAKE_CURRENT_SOURCE_DIR}/base_paths_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/base_paths_posix.h
    ${CMAKE_CURRENT_SOURCE_DIR}/base_switches.h
    ${CMAKE_CURRENT_SOURCE_DIR}/base64.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/base64.h
    ${CMAKE_CURRENT_SOURCE_DIR}/basictypes.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bind.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bind_helpers.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/bind_helpers.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bind_internal.h
    ${CMAKE_CURRENT_SOURCE_DIR}/bits.h
    ${CMAKE_CURRENT_SOURCE_DIR}/build_time.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/build_time.h
    ${CMAKE_CURRENT_SOURCE_DIR}/callback.h
    ${CMAKE_CURRENT_SOURCE_DIR}/callback_helpers.h
    ${CMAKE_CURRENT_SOURCE_DIR}/callback_internal.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/callback_internal.h
    ${CMAKE_CURRENT_SOURCE_DIR}/cancelable_callback.h
    ${CMAKE_CURRENT_SOURCE_DIR}/command_line.h
    ${CMAKE_CURRENT_SOURCE_DIR}/compiler_specific.h
    ${CMAKE_CURRENT_SOURCE_DIR}/containers/linked_list.h
    ${CMAKE_CURRENT_SOURCE_DIR}/containers/mru_cache.h
    ${CMAKE_CURRENT_SOURCE_DIR}/containers/small_map.h
    ${CMAKE_CURRENT_SOURCE_DIR}/containers/stack_container.h
    ${CMAKE_CURRENT_SOURCE_DIR}/cpu.h
    ${CMAKE_CURRENT_SOURCE_DIR}/critical_closure.h
    ${CMAKE_CURRENT_SOURCE_DIR}/debug/alias.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/debug/alias.h
    ${CMAKE_CURRENT_SOURCE_DIR}/debug/crash_logging.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/debug/crash_logging.h
    ${CMAKE_CURRENT_SOURCE_DIR}/debug/debugger.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/debug/debugger.h
    ${CMAKE_CURRENT_SOURCE_DIR}/debug/debugger_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/debug/leak_annotations.h
    ${CMAKE_CURRENT_SOURCE_DIR}/debug/leak_tracker.h
    ${CMAKE_CURRENT_SOURCE_DIR}/debug/profiler.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/debug/profiler.h
    ${CMAKE_CURRENT_SOURCE_DIR}/debug/stack_trace.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/debug/stack_trace.h
    ${CMAKE_CURRENT_SOURCE_DIR}/debug/trace_event.h
    ${CMAKE_CURRENT_SOURCE_DIR}/debug/trace_event_impl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/debug/trace_event_impl.h
    ${CMAKE_CURRENT_SOURCE_DIR}/debug/trace_event_internal.h
    ${CMAKE_CURRENT_SOURCE_DIR}/environment.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/environment.h
    ${CMAKE_CURRENT_SOURCE_DIR}/file_descriptor_posix.h
    ${CMAKE_CURRENT_SOURCE_DIR}/file_path.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/file_path.h
    ${CMAKE_CURRENT_SOURCE_DIR}/file_util.h
    ${CMAKE_CURRENT_SOURCE_DIR}/file_version_info.h
    ${CMAKE_CURRENT_SOURCE_DIR}/files/dir_reader_fallback.h
    ${CMAKE_CURRENT_SOURCE_DIR}/files/dir_reader_posix.h
    ${CMAKE_CURRENT_SOURCE_DIR}/files/file_path_watcher.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/files/file_path_watcher.h
    ${CMAKE_CURRENT_SOURCE_DIR}/files/file_path_watcher_stub.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/files/file_util_proxy.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/files/file_util_proxy.h
    ${CMAKE_CURRENT_SOURCE_DIR}/files/important_file_writer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/files/important_file_writer.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/files/scoped_temp_dir.h
    ${CMAKE_CURRENT_SOURCE_DIR}/float_util.h
    ${CMAKE_CURRENT_SOURCE_DIR}/format_macros.h
    ${CMAKE_CURRENT_SOURCE_DIR}/gtest_prod_util.h
    ${CMAKE_CURRENT_SOURCE_DIR}/guid.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/guid.h
    ${CMAKE_CURRENT_SOURCE_DIR}/guid_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/hash.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/hash.h
    ${CMAKE_CURRENT_SOURCE_DIR}/hash_tables.h
    ${CMAKE_CURRENT_SOURCE_DIR}/hi_res_timer_manager_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/hi_res_timer_manager.h
    ${CMAKE_CURRENT_SOURCE_DIR}/id_map.h
    ${CMAKE_CURRENT_SOURCE_DIR}/json/json_file_value_serializer.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/json/json_file_value_serializer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/json/json_parser.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/json/json_parser.h
    ${CMAKE_CURRENT_SOURCE_DIR}/json/json_reader.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/json/json_reader.h
    ${CMAKE_CURRENT_SOURCE_DIR}/json/json_string_value_serializer.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/json/json_string_value_serializer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/json/json_value_converter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/json/json_writer.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/json/json_writer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/json/string_escape.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/json/string_escape.h
    ${CMAKE_CURRENT_SOURCE_DIR}/lazy_instance.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/lazy_instance.h
    ${CMAKE_CURRENT_SOURCE_DIR}/location.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/location.h
    ${CMAKE_CURRENT_SOURCE_DIR}/logging.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/logging.h
    ${CMAKE_CURRENT_SOURCE_DIR}/memory/aligned_memory.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/memory/aligned_memory.h
    ${CMAKE_CURRENT_SOURCE_DIR}/memory/discardable_memory.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/memory/discardable_memory.h
    ${CMAKE_CURRENT_SOURCE_DIR}/memory/linked_ptr.h
    ${CMAKE_CURRENT_SOURCE_DIR}/memory/manual_constructor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/memory/raw_scoped_refptr_mismatch_checker.h
    ${CMAKE_CURRENT_SOURCE_DIR}/memory/ref_counted.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/memory/ref_counted.h
    ${CMAKE_CURRENT_SOURCE_DIR}/memory/ref_counted_memory.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/memory/ref_counted_memory.h
    ${CMAKE_CURRENT_SOURCE_DIR}/memory/scoped_handle.h
    ${CMAKE_CURRENT_SOURCE_DIR}/memory/scoped_nsobject.h
    ${CMAKE_CURRENT_SOURCE_DIR}/memory/scoped_open_process.h
    ${CMAKE_CURRENT_SOURCE_DIR}/memory/scoped_policy.h
    ${CMAKE_CURRENT_SOURCE_DIR}/memory/scoped_ptr.h
    ${CMAKE_CURRENT_SOURCE_DIR}/memory/scoped_vector.h
    ${CMAKE_CURRENT_SOURCE_DIR}/memory/singleton.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/memory/singleton.h
    ${CMAKE_CURRENT_SOURCE_DIR}/memory/weak_ptr.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/memory/weak_ptr.h
    ${CMAKE_CURRENT_SOURCE_DIR}/message_loop.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/message_loop.h
    ${CMAKE_CURRENT_SOURCE_DIR}/message_loop_proxy.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/message_loop_proxy.h
    ${CMAKE_CURRENT_SOURCE_DIR}/message_loop_proxy_impl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/message_loop_proxy_impl.h
    ${CMAKE_CURRENT_SOURCE_DIR}/message_pump.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/message_pump.h
    ${CMAKE_CURRENT_SOURCE_DIR}/message_pump_android.h
    ${CMAKE_CURRENT_SOURCE_DIR}/message_pump_default.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/message_pump_default.h
    ${CMAKE_CURRENT_SOURCE_DIR}/move.h
    ${CMAKE_CURRENT_SOURCE_DIR}/native_library.h
    ${CMAKE_CURRENT_SOURCE_DIR}/observer_list.h
    ${CMAKE_CURRENT_SOURCE_DIR}/observer_list_threadsafe.h
    ${CMAKE_CURRENT_SOURCE_DIR}/os_compat_android.h
    ${CMAKE_CURRENT_SOURCE_DIR}/os_compat_nacl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/os_compat_nacl.h
    ${CMAKE_CURRENT_SOURCE_DIR}/path_service.h
    ${CMAKE_CURRENT_SOURCE_DIR}/pending_task.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/pending_task.h
    ${CMAKE_CURRENT_SOURCE_DIR}/pickle.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/pickle.h
    ${CMAKE_CURRENT_SOURCE_DIR}/platform_file.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/platform_file.h
    ${CMAKE_CURRENT_SOURCE_DIR}/port.h
    ${CMAKE_CURRENT_SOURCE_DIR}/posix/eintr_wrapper.h
    ${CMAKE_CURRENT_SOURCE_DIR}/posix/global_descriptors.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/posix/global_descriptors.h
    ${CMAKE_CURRENT_SOURCE_DIR}/process.h
    ${CMAKE_CURRENT_SOURCE_DIR}/process_info.h
    ${CMAKE_CURRENT_SOURCE_DIR}/process_util.h
    ${CMAKE_CURRENT_SOURCE_DIR}/profiler/scoped_profile.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/profiler/scoped_profile.h
    ${CMAKE_CURRENT_SOURCE_DIR}/profiler/alternate_timer.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/profiler/alternate_timer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/profiler/tracked_time.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/profiler/tracked_time.h
    ${CMAKE_CURRENT_SOURCE_DIR}/rand_util.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/rand_util.h
    ${CMAKE_CURRENT_SOURCE_DIR}/rand_util_nacl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/run_loop.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/run_loop.h
    ${CMAKE_CURRENT_SOURCE_DIR}/safe_numerics.h
    ${CMAKE_CURRENT_SOURCE_DIR}/safe_strerror_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/safe_strerror_posix.h
    ${CMAKE_CURRENT_SOURCE_DIR}/scoped_native_library.h
    ${CMAKE_CURRENT_SOURCE_DIR}/sequence_checker.h
    ${CMAKE_CURRENT_SOURCE_DIR}/sequence_checker_impl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/sequence_checker_impl.h
    ${CMAKE_CURRENT_SOURCE_DIR}/sequenced_task_runner.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/sequenced_task_runner.h
    ${CMAKE_CURRENT_SOURCE_DIR}/sequenced_task_runner_helpers.h
    ${CMAKE_CURRENT_SOURCE_DIR}/sha1.h
    ${CMAKE_CURRENT_SOURCE_DIR}/sha1_portable.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/shared_memory.h
    ${CMAKE_CURRENT_SOURCE_DIR}/shared_memory_nacl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/single_thread_task_runner.h
    ${CMAKE_CURRENT_SOURCE_DIR}/stl_util.h
    ${CMAKE_CURRENT_SOURCE_DIR}/string_number_conversions.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/string_number_conversions.h
    ${CMAKE_CURRENT_SOURCE_DIR}/string_piece.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/string_piece.h
    ${CMAKE_CURRENT_SOURCE_DIR}/string_split.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/string_split.h
    ${CMAKE_CURRENT_SOURCE_DIR}/string_util.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/string_util.h
    ${CMAKE_CURRENT_SOURCE_DIR}/string_util_posix.h
    ${CMAKE_CURRENT_SOURCE_DIR}/string16.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/string16.h
    ${CMAKE_CURRENT_SOURCE_DIR}/stringprintf.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/stringprintf.h
    ${CMAKE_CURRENT_SOURCE_DIR}/strings/string_tokenizer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/strings/stringize_macros.h
    ${CMAKE_CURRENT_SOURCE_DIR}/supports_user_data.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/supports_user_data.h
    ${CMAKE_CURRENT_SOURCE_DIR}/synchronization/cancellation_flag.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/synchronization/cancellation_flag.h
    ${CMAKE_CURRENT_SOURCE_DIR}/synchronization/condition_variable.h
    ${CMAKE_CURRENT_SOURCE_DIR}/synchronization/condition_variable_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/synchronization/lock.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/synchronization/lock.h
    ${CMAKE_CURRENT_SOURCE_DIR}/synchronization/lock_impl.h
    ${CMAKE_CURRENT_SOURCE_DIR}/synchronization/lock_impl_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/synchronization/spin_wait.h
    ${CMAKE_CURRENT_SOURCE_DIR}/synchronization/waitable_event.h
    ${CMAKE_CURRENT_SOURCE_DIR}/synchronization/waitable_event_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/synchronization/waitable_event_watcher.h
    ${CMAKE_CURRENT_SOURCE_DIR}/synchronization/waitable_event_watcher_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/system_monitor/system_monitor.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/system_monitor/system_monitor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/system_monitor/system_monitor_android.h
    ${CMAKE_CURRENT_SOURCE_DIR}/system_monitor/system_monitor_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/sys_byteorder.h
    ${CMAKE_CURRENT_SOURCE_DIR}/sys_info.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/sys_info.h
    ${CMAKE_CURRENT_SOURCE_DIR}/sys_string_conversions.h
    ${CMAKE_CURRENT_SOURCE_DIR}/sys_string_conversions_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/task_runner.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/task_runner.h
    ${CMAKE_CURRENT_SOURCE_DIR}/task_runner_util.h
    ${CMAKE_CURRENT_SOURCE_DIR}/template_util.h
    ${CMAKE_CURRENT_SOURCE_DIR}/thread_task_runner_handle.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/thread_task_runner_handle.h
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/non_thread_safe.h
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/non_thread_safe_impl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/non_thread_safe_impl.h
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/platform_thread.h
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/platform_thread_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/post_task_and_reply_impl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/post_task_and_reply_impl.h
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/sequenced_worker_pool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/simple_thread.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/simple_thread.h
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/thread.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/thread.h
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/thread_checker.h
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/thread_checker_impl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/thread_checker_impl.h
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/thread_collision_warner.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/thread_collision_warner.h
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/thread_id_name_manager.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/thread_id_name_manager.h
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/thread_local.h
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/thread_local_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/thread_local_storage.h
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/thread_local_storage_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/thread_restrictions.h
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/thread_restrictions.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/watchdog.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/watchdog.h
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/worker_pool.h
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/worker_pool.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/worker_pool_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/threading/worker_pool_posix.h
    ${CMAKE_CURRENT_SOURCE_DIR}/time.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/time.h
    ${CMAKE_CURRENT_SOURCE_DIR}/time_posix.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/timer.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/timer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/tracked_objects.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/tracked_objects.h
    ${CMAKE_CURRENT_SOURCE_DIR}/tracking_info.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/tracking_info.h
    ${CMAKE_CURRENT_SOURCE_DIR}/tuple.h
    ${CMAKE_CURRENT_SOURCE_DIR}/utf_offset_string_conversions.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/utf_offset_string_conversions.h
    ${CMAKE_CURRENT_SOURCE_DIR}/utf_string_conversion_utils.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/utf_string_conversion_utils.h
    ${CMAKE_CURRENT_SOURCE_DIR}/utf_string_conversions.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/utf_string_conversions.h
    ${CMAKE_CURRENT_SOURCE_DIR}/values.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/values.h
    ${CMAKE_CURRENT_SOURCE_DIR}/value_conversions.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/value_conversions.h
    ${CMAKE_CURRENT_SOURCE_DIR}/version.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/version.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vlog.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/vlog.h
    ${CMAKE_CURRENT_SOURCE_DIR}/string16.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/sync_socket_nacl.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/time_posix.cc
)

set(libbase_untrusted_include_dirs
    ${CHROME_DEPS_DIR}
    ${CHROME_DEPS_DIR}/ppapi
)

nacl_build_nlib(libbase_untrusted_64.a "" 64 "" "${libbase_untrusted_include_dirs}" "" "libbase_untrusted.a" "${libbase_untrusted_sources}")
nacl_build_nlib(libbase_untrusted_32.a "" 32 "" "${libbase_untrusted_include_dirs}" "" "libbase_untrusted.a" "${libbase_untrusted_sources}")

add_custom_target(base_untrusted ALL
    DEPENDS ${NACL_TC_NEWLIB64_DIR}/libbase_untrusted.a ${NACL_TC_NEWLIB32_DIR}/libbase_untrusted.a
)
